hard-gists/ec8f1689bfde3ce9a920/run.log
=== Docker Run Log for ec8f1689bfde3ce9a920 ===
Started at: Mi 29. Okt 20:54:30 CET 2025

[2025-10-29 20:54:30] START: Running container for ec8f1689bfde3ce9a920
[2025-10-29 20:54:30] SUCCESS: Container 5202cc74cd8f49d49ead8826ac90530f56b04913261e1f56787e819fe81daf7e started for ec8f1689bfde3ce9a920
=== Container logs for ec8f1689bfde3ce9a920 ===
  File "/snippet.py", line 23
    print 'Starting web app'
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ec8f1689bfde3ce9a920 ===
[2025-10-29 20:54:32] INFO: Container 5202cc74cd8f49d49ead8826ac90530f56b04913261e1f56787e819fe81daf7e has stopped
